# Calculator

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.html  README.md  calculator.spec  genindex.html  index.html  installer-win64.nsi  objects.inv  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-docs.txt  requirements-true.txt  requirements.txt  search.html  searchindex.js
.github/workflows/: code_quality.yml  publish_docs.yml  publish_exe.yml  publish_testpypi.yml
_modules/: index.html
_modules/calculator/: __main__.html  calculator.html
_sources/: README.rst.txt  index.rst.txt
_sources/api/gui_classes/: calculator.calculator.Calculator.rst.txt
_sources/api/gui_functions/: calculator.__main__.open.rst.txt
api/: toc.html
api/gui_classes/: calculator.calculator.Calculator.html
api/gui_functions/: calculator.__main__.open.html
calculator/: __init__.py  __main__.py  calculator.py
calculator/uis/: calculator.ui
dev/: calculator.spec
docs/: conf.py
docs/_templates/: class_no_inheritance.rst  module.rst
docs/_utils/: spelling_wordlist.txt
docs/api/: toc.rst
