[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "calculator"
dist-name = "calculator-stephen-roille"  # name on PyPI
author = "Stephen Roille"
author-email = "stephen.roille@gmail.com"
home-page = "https://github.com/StephenRoille/calculator"
description-file = "README.md"
# https://pypi.org/classifiers/
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
]
keywords = "Calculator GUI Application"
requires-python = ">=3.6"
requires = [
  "PyQt5~=5.15",
]

[tool.flit.metadata.requires-extra]
test = []
doc = []

[tool.flit.scripts]
calculator = "calculator.__main__:open"
